# dotfiles

./: .gitignore  .sops.yaml  AGENTS.md  CONTEXT.md  LICENSE  README.md  README.zh-CN.md  fix-antigravity.nu  flake.nix  result
.agents/rules/: README.md  env.md
.claude/: CLAUDE.md  settings.json
.claude/hooks/: check-nix.sh
.codex/: README.md  hooks.json
.codex/hooks/: check-nix-stop.sh
.github/workflows/: pages.yml
docs/: RECOVERY_AND_UPDATE.md  RECOVERY_AND_UPDATE.zh-CN.md  SECRET_MANAGEMENT.md  SECRET_MANAGEMENT.zh-CN.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md  daily-usage.md  daily-usage.zh-CN.md  installation.md  installation.zh-CN.md  maintenance.md  maintenance.zh-CN.md  recovery.md  recovery.zh-CN.md  secret-management.md  secret-management.zh-CN.md  stage0-workstation.zh-CN.md  upstream-reuse.md  upstream-reuse.zh-CN.md
home/: core.nix  shared.nix  workstation-cn.nix  workstation.nix
home/desktop/: default.nix
home/programs/: default.nix  gaming.nix  workstation-cn.nix  workstation.nix
home/shell/: default.nix  headless.nix
home/tui/: default.nix  headless.nix
hosts/vm-test/: configuration.nix  hardware-configuration.nix
lib/: default.nix  versions.nix
modules/home-manager/: tui.nix  (+7 more)
nixos/: china-network.nix  common.nix  configuration.nix  desktop.nix  disko-config.nix  hardware-configuration.nix  mudfish.nix  nvidia.nix  proxy.nix  workstation-audio.nix
overlays/: default.nix
pkgs/: default.nix  mudfish.nix  rime-data-cantonese.nix
profiles/: ai-serving.nix  default.nix  headless.nix  workstation-cn.nix  workstation.nix
rime-sync/: README.md
secrets/: secrets.yaml
web/workstation/: Cargo.toml  Trunk.toml  build.rs  index.html  styles.css
web/workstation/locales/: en.json  zh-CN.json
web/workstation/src/: app.rs  generator.rs  main.rs
(+107 files in other folders)
