[package]
name = "dotfiles-workstation-web"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
js-sys = "0.3"
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }
leptos_i18n = { version = "0.6", default-features = false, features = ["csr"] }
serde_json = "1"
sha-crypt = { version = "0.5", default-features = false, features = ["std"] }
thaw = { version = "0.5.0-beta", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "BlobPropertyBag",
  "Clipboard",
  "Document",
  "Element",
  "HtmlAnchorElement",
  "HtmlDocument",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Navigator",
  "Url",
  "Window",
]

[build-dependencies]
leptos_i18n_build = { version = "0.6", default-features = false, features = ["csr"] }
serde_json = "1"
